<resources>
    <string name="app_name">InfoShop</string>
    <string name="title_profile">Perfil</string>
    <string name="title_home">Home</string>
    <string name="title_projects">Projetos</string>
    <string name="title_activity_login">Bem vindo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_password">Senha deve ter > 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bom_dia_">"Bom dia, "</string>
    <string name="boa_tarde_">"Boa tarde, "</string>
    <string name="boa_noite_">"Boa noite, "</string>
    <string name="adicionar">adicionar</string>
    <string name="lorem_ipsum_1p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse libero massa, fermentum a erat dapibus, sagittis bibendum dolor. Vivamus scelerisque, est id blandit sodales, augue lectus elementum ex, eu laoreet mi arcu sit amet nisi. Morbi hendrerit enim sit amet eros aliquam blandit. Aenean iaculis, sem id feugiat dapibus, sapien ligula faucibus metus, sed porttitor libero purus sed felis. Vivamus libero turpis, elementum vel varius vel, eleifend at est. Maecenas in congue libero, ac pellentesque tellus. Proin convallis nibh odio, et placerat purus congue at. Nullam tempus metus mauris, eu convallis orci cursus nec. Aenean turpis nisi, sollicitudin lobortis erat eu, ornare bibendum ante. Pellentesque ut orci lobortis, varius dui et, hendrerit lacus. Ut vel venenatis ex. Sed egestas, dui ut imperdiet tempus, libero urna ultricies purus, nec iaculis est enim in metus. Aliquam erat volutpat.</string>
    <string name="nao_e_util">Não é Útil</string>
    <string name="mensagem">Mensagem</string>
    <string name="sem_projetos">Sem projetos!</string>
    <string name="tentar_novamente">Tentar Novamente</string>
    <string name="refresh_projects">Refresh Projects</string>
    <string name="excluir">Excluir</string>
    <string name="voce_tem_certeza_que_nao_deseja_mais_ver_este_projeto">Você tem certeza que não deseja mais ver este projeto?</string>
    <string name="voce_tem_certeza_que_deseja_desfavoritar_este_projeto">Você tem certeza que deseja desfavoritar este projeto?</string>
    <string name="cancelar">Cancelar</string>
    <string name="categoria">Categoria</string>
    <string name="projects_categories">Categorias</string>
    <string name="selecione_uma_categoria">Selecione uma categoria: </string>
    <string name="password_hint">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="username">Username</string>
    <string name="ja_cadastrado_login">Já Cadastrado? Login</string>
    <string name="novo_registre_se">Novo? Registre-se</string>
    <string name="entrar">Entrar</string>
    <string name="address_invalid">Endereço inválido</string>
    <string name="phone_invalid">Telefone Invalido</string>
    <string name="telefone">Telefone</string>
    <string name="title_activity_project_detail">Detalhes do projeto</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="titulo_do_projeto">Titulo do projeto</string>
    <string name="titulo_ou_descricao">Título ou descrição....</string>
    <string name="favoritos">Favoritos</string>
    <string name="Desfavoritar">Desfavoritar</string>
    <string name="Total_">Total:</string>
</resources>